--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chart.js": "^3.5.1",
+    "firebase": "^9.1.0",
     "html-react-parser": "^1.4.12",
     "react": "^18.1.0",
     "react-alice-carousel": "^2.6.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-google-button": "^0.7.2",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
